objects/Product__c.object
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CAS_NO__c</fullName>
        <label>CAS NO.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_MT__c</fullName>
        <label>Weight (MT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Packed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Quantity__c * Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Country</label>
        <referenceTo>Add_Country__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BULK_Type_of_Tanks__c</fullName>
        <label>BULK(Type of Tanks)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISO Tank</fullName>
                </value>
                <value>
                    <fullName>Truck Tank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Data_10_7_23__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product  Data 10.7.23</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Specifications__c</fullName>
        <label>Product Specifications</label>
        <type>TextArea</type>
    </fields>
    <validationRules>
        <fullName>Val_Cas</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( CAS_NO__c ) != 7</errorConditionFormula>
        <errorMessage>1211-44-8 CAS No in This Format Only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAS_Val_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>!REGEX(CAS_NO__c ,&quot;[0-9]{4}[0-9]{2}[0-9]{1}&quot;)</errorConditionFormula>
        <errorMessage>Number Should be in this Format 1234-23-4</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rule_FOr_CAS_No_Format</fullName>
        <active>false</active>
        <errorConditionFormula>NOT( ISNUMBER( CAS_NO__c ) )</errorConditionFormula>
        <errorDisplayField>CAS_NO__c</errorDisplayField>
        <errorMessage>Cas Should Be nly Numaric Value</errorMessage>
    </validationRules>
</CustomObject>